--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -1,27 +1,28 @@
 - profile:
-  initials: JD
-  name: John Doe
-  email: john.doe@change.me
-  profession: Web Developer
-  image: images/profile.jpg
-  location: New York, USA
-  relocation: true
-  company: Atomic Studio
-  for_hire: true
-  focus: Learning Gatsby
-  focus_url: https://gatsbyjs.org
+  initials: FL
+  name: Fredrik Lunde
+  email: fredrik.lunde@frontedgeit.se
+  profession: CEO, Software Craftsman
+  image: images/Fredrik.jpg
+  location: Gothenburg, Sweden
+  relocation: false
+  company: Front Edge IT AB
+  for_hire: false
+  focus: Training Software Craftsmen
+  focus_url: https://manifesto.softwarecraftsmanship.org/
   about: |
-    Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.
+    Convinced Software Craftsman, truly belive developers needs to focus to get it right from the start and then keep on building good software. Its ok not to get it right the first time, 
+    but before production push, code needs to be cleaned. Im building an IT-Consultancy company where software development is the core of everything, and where we truly take pride in what we do.
 
-    User generated content in real-time will have multiple touchpoints for offshoring. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.
+    We are helping our customers to succeed with their software, in a sustainable and long-term way.
   skills:
-    - JavaScript
-    - HTML / CSS
-    - Ruby on Rails
+    - Leadership
+    - Code
+    - Software Craftsmanship
   tools:
     - React
-    - VSCode
-    - Gatsby
+    - Agile
+    - Google
   budget:
     currency: $
     min: 5
