--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -1,18 +1,9 @@
-- company: Atomic Studio
-  position: Senior Web Developer
-  period: January 2018 - present
-  url: https://atomic.studio
+- company: Front Edge IT AB
+  position: CEO
+  period: May 2018 - present
+  url: https://frontedgeit.se
 
-- company: Atomic Studio
-  position: Web Developer
-  period: January 2014 - December 2017
-  url: https://atomic.studio
-
-- company: WebConnect Agency
-  position: Junior Web Developer
-  period: November 2010 - December 2013
-  url:
-
-- company: Freelance
-  position: Web Developer
-  period: April 2008 - October 2010
+- company: Sigma IT Consulting
+  position: Developer / Scrum Master / Team Leader
+  period: August 2012 - May 2018
+  url: https://www.sigmait.se/sv/
