--- a/content/projects.yaml
+++ b/content/projects.yaml
@@ -1,18 +1,20 @@
-- name: Example 1
-  url: https://github.com
-  description: Override the digital divide with additional clickthroughs from DevOps. User generated content in real-time will have multiple touchpoints for offshoring.
-  status: in progress
-  tags:
-    - JavaScript
-    - Gatsby
-  icon: github
-
-- name: Example 2
-  url: https://github.com
-  description: Leverage agile frameworks to provide a robust synopsis for high level overviews.
+- name: Personal Portfolio
+  url: https://github.com/fredriklunde/personal_portfolio
+  description: Personal portfolio site
   status: live
   tags:
     - JavaScript
-    - HTML
+    - React
+    - Gatsby
+  icon: github
+  image: images/projects/portfolio.png
+
+- name: Vacation and wellness allowance calculator
+  url: https://fredriklunde.github.io/calc-vacation-and-health-sub/
+  description: Calculates the number of vacation days and wellness allowance based on your start date at the company
+  status: live
+  tags:
+    - JavaScript
+    - React
   icon: website
-  image: images/project.jpg
+  image: images/projects/calculatebenefits.png
